--- a/app/src/main/res/layout/activity_pullrequest_detail.xml
+++ b/app/src/main/res/layout/activity_pullrequest_detail.xml
@@ -17,13 +17,17 @@
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="56dp"
-        />
+        /></android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/loading_view"
