--- a/app/src/main/res/menu/content_editor.xml
+++ b/app/src/main/res/menu/content_editor.xml
@@ -4,6 +4,12 @@
     >
 
   <item
+      android:id="@+id/action_trash"
+      android:title="@string/trash_content"
+      app:showAsAction="always"
+      />
+
+  <item
       android:id="@+id/action_ok"
       android:title="@string/ok"
       app:showAsAction="always"
