--- a/app/src/githubDebug/res/values/colors.xml
+++ b/app/src/githubDebug/res/values/colors.xml
@@ -17,4 +17,8 @@
   <color name="commit_stats_bg">#96ff8cb9</color>
   <color name="commit_stats_stroke">#a8e75c69</color>
 
+  <color name="primary_enterprise">@color/md_brown_500</color>
+  <color name="primary_enterprise_dark">@color/md_brown_700</color>
+  <color name="accent_enterprise">@color/md_light_green_A400</color>
+
 </resources>
