--- a/app/src/githubRelease/res/values/colors.xml
+++ b/app/src/githubRelease/res/values/colors.xml
@@ -16,4 +16,9 @@
 
   <color name="commit_stats_bg">#9697d2ff</color>
   <color name="commit_stats_stroke">#a883bae7</color>
+
+  <color name="primary_enterprise">@color/md_blue_grey_500</color>
+  <color name="primary_enterprise_dark">@color/md_blue_grey_700</color>
+  <color name="accent_enterprise">@color/md_teal_A400</color>
+
 </resources>
