--- a/app/src/github/res/layout/enterprise_ad_activity.xml
+++ b/app/src/github/res/layout/enterprise_ad_activity.xml
@@ -21,24 +21,37 @@
         android:text="@string/enterprise_ad_gitskarios"
         android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/title_secondary"
+    <RelativeLayout
+        android:id="@+id/view_new_app_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/gapMedium"
-        android:gravity="center"
-        android:text="@string/enterprise_ad_for_ngithub_enteprise"
-        android:textSize="32sp"
         android:visibility="invisible"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:layout_marginTop="@dimen/gapXLarge">
+
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:src="@drawable/ic_launcher_enterprise"
+            android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="156dp"
+            android:gravity="center"
+            android:text="@string/enterprise_ad_for_ngithub_enteprise"
+            android:textSize="32sp" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/gapXXLarge"
+        android:layout_marginTop="@dimen/gapXLarge"
         android:text="@string/enterprise_ad_try_it_now"
+        android:textColor="@color/black_semi_transparent"
         android:visibility="invisible"
-        tools:visibility="visible"  />
+        tools:visibility="visible" />
 </LinearLayout>
