Add ability to open user detail from anywhere user avatar is loaded

--- a/app/src/main/res/layout/issue_detail_issue_comment_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_comment_view.xml
@@ -19,7 +19,7 @@
         app:tl_lineWidth="1dp"
         />
 
-    <com.mikepenz.materialdrawer.view.BezelImageView
+    <com.alorma.github.ui.view.UserAvatarView
         android:id="@+id/profileIcon"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -30,9 +30,6 @@
         android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
         android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
         android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
-        android:clickable="false"
-        android:elevation="1dp"
-        app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
         />
   </RelativeLayout>
 
