--- a/app/src/main/res/layout/release_detail_fragment.xml
+++ b/app/src/main/res/layout/release_detail_fragment.xml
@@ -21,7 +21,7 @@
                   android:layout_height="@dimen/material_drawer_item_profile"
         >
 
-      <com.mikepenz.materialdrawer.view.BezelImageView
+      <com.alorma.github.ui.view.UserAvatarView
           android:id="@+id/profileIcon"
           android:layout_width="@dimen/material_drawer_item_profile_icon"
           android:layout_height="@dimen/material_drawer_item_profile_icon"
@@ -30,8 +30,6 @@
           android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
           android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
           android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
-          android:clickable="false"
-          app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
           />
 
       <TextView
