--- a/app/src/main/res/layout/issue_detail_issue_timeline_secondary_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_secondary_view.xml
@@ -14,14 +14,12 @@
       app:tl_lineWidth="1dp"
       />
 
-  <com.mikepenz.materialdrawer.view.BezelImageView
+  <com.alorma.github.ui.view.UserAvatarView
       android:id="@+id/profileIcon"
       android:layout_width="24dp"
       android:layout_height="24dp"
       android:layout_marginLeft="-18dp"
       android:layout_marginTop="@dimen/gapMedium"
-      android:clickable="false"
-      app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
       />
 
   <TextView
