--- a/app/src/main/res/layout/issue_detail_issue_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_view.xml
@@ -34,19 +34,17 @@
             />
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:tools="http://schemas.android.com/tools"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/material_drawer_item_profile"
-                        android:id="@+id/author"
-                        android:layout_alignParentTop="true"
-                        android:paddingLeft="@dimen/material_drawer_vertical_padding"
-                        android:paddingStart="@dimen/material_drawer_vertical_padding"
-                        android:paddingRight="@dimen/material_drawer_vertical_padding"
-                        android:paddingEnd="@dimen/material_drawer_vertical_padding"
-            >
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/material_drawer_item_profile"
+            android:id="@+id/author"
+            android:layout_alignParentTop="true"
+            android:paddingLeft="@dimen/material_drawer_vertical_padding"
+            android:paddingStart="@dimen/material_drawer_vertical_padding"
+            android:paddingRight="@dimen/material_drawer_vertical_padding"
+            android:paddingEnd="@dimen/material_drawer_vertical_padding">
 
-          <com.mikepenz.materialdrawer.view.BezelImageView
+          <com.alorma.github.ui.view.UserAvatarView
               android:id="@+id/profileIcon"
               android:layout_width="@dimen/material_drawer_item_profile_icon"
               android:layout_height="@dimen/material_drawer_item_profile_icon"
@@ -55,9 +53,6 @@
               android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
               android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
               android:layout_gravity="center_vertical"
-              android:clickable="false"
-              android:elevation="1dp"
-              app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
               />
 
           <LinearLayout
