--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -21,7 +21,7 @@
       android:paddingTop="@dimen/material_drawer_item_profile_icon_padding"
       >
 
-    <com.mikepenz.materialdrawer.view.BezelImageView
+    <com.alorma.github.ui.view.UserAvatarView
         android:id="@+id/profileIcon"
         android:layout_width="@dimen/material_drawer_item_profile_icon"
         android:layout_height="@dimen/material_drawer_item_profile_icon"
