--- a/app/src/main/res/layout/pullrequest_detail_issue_view.xml
+++ b/app/src/main/res/layout/pullrequest_detail_issue_view.xml
@@ -46,7 +46,7 @@
                         android:paddingStart="@dimen/material_drawer_vertical_padding"
             >
 
-          <com.mikepenz.materialdrawer.view.BezelImageView
+          <com.alorma.github.ui.view.UserAvatarView
               android:id="@+id/profileIcon"
               android:layout_width="@dimen/material_drawer_item_profile_icon"
               android:layout_height="@dimen/material_drawer_item_profile_icon"
@@ -55,9 +55,6 @@
               android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
               android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
               android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
-              android:clickable="false"
-              android:elevation="1dp"
-              app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
               />
 
           <LinearLayout
