--- a/app/src/main/res/layout/release_assets_fragment.xml
+++ b/app/src/main/res/layout/release_assets_fragment.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@id/listContentFL"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_github_light">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@id/recycler"
