--- a/app/src/main/res/layout/issues_list_fragment.xml
+++ b/app/src/main/res/layout/issues_list_fragment.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/listContentFL"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_github_light">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/listContainer"
