--- a/app/src/main/res/layout/list_fragment_gists.xml
+++ b/app/src/main/res/layout/list_fragment_gists.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@id/listContentFL"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_github_light">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/listContainer"
