--- a/app/src/main/res/layout/notifications_list_fragment.xml
+++ b/app/src/main/res/layout/notifications_list_fragment.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@id/listContentFL"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_github_light">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/listContainer"
