--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,6 @@
         <item name="color">@color/gray_github_medium</item>
     </style>
 
-    <style name="GistFileRowToolbar" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:textColorSecondary">@color/accent</item>
-    </style>
 
     <style name="FileRowToolbar" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorPrimary">@color/black_semi_transparent</item>
@@ -133,4 +130,73 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!-- Event styles -->
+
+    <style name="Event" />
+
+    <style name="Event.Title" parent="TextAppearance.AppCompat.Body1">
+
+    </style>
+
+    <style name="Event.Date" parent="TextAppearance.AppCompat.Caption">
+
+    </style>
+
+    <!-- Repos styles -->
+
+    <style name="Repos" />
+
+    <style name="Repos.Title" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">?attr/gitskarios_title</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:lines">1</item>
+    </style>
+
+    <style name="Repos.Owner" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@color/md_grey_600</item>
+    </style>
+
+    <style name="Repos.Description" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">2</item>
+    </style>
+
+    <style name="Repos.Info" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/textSizeSmall</item>
+    </style>
+
+    <!-- Notifications styles -->
+
+    <style name="Notifications" />
+
+    <style name="Notifications.Title" parent="TextAppearance.AppCompat.Subhead">
+        <item name="android:textColor">?attr/gitskarios_title</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:lines">1</item>
+    </style>
+
+    <!-- Gists styles -->
+
+    <style name="Gists" />
+
+    <style name="Gists.Title" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">?attr/gitskarios_title</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:lines">1</item>
+    </style>
+
+    <style name="Gists.NumFiles" parent="TextAppearance.AppCompat.Subhead">
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+    <style name="Gists.FileRowToolbar" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorSecondary">@color/accent</item>
+    </style>
 </resources>
