--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,27 +2,12 @@
 <resources>
 
     <style name="AppTheme" parent="Base.AppTheme" />
-
-    <style name="AppTheme.RepoDetail" parent="Base.AppTheme">
-        <item name="material_drawer_background">@color/material_drawer_dark_background</item>
-        <item name="material_drawer_primary_text">@color/material_drawer_dark_primary_text</item>
-        <item name="material_drawer_primary_icon">@color/material_drawer_dark_primary_icon</item>
-        <item name="material_drawer_secondary_text">@color/material_drawer_dark_secondary_text
-        </item>
-        <item name="material_drawer_hint_text">@color/material_drawer_dark_hint_text</item>
-        <item name="material_drawer_hint_icon">@color/material_drawer_dark_hint_icon</item>
-        <item name="material_drawer_divider">@color/material_drawer_dark_divider</item>
-        <item name="material_drawer_selected">@color/material_drawer_dark_selected</item>
-        <item name="material_drawer_selected_text">@color/primary</item>
-        <item name="material_drawer_header_selection_text">
-            @color/material_drawer_header_selection_text
-        </item>
-    </style>
+    <style name="AppTheme.Dark" parent="Base.AppTheme.Dark" />
 
     <style name="AppTheme.Search" parent="Base.AppTheme.Search" />
+    <style name="AppTheme.Dark.Search" parent="Base.AppTheme.Dark.Search" />
 
     <style name="Base.AppTheme" parent="AppTheme.AppCompat.Default">
-        <item name="android:windowBackground">@color/white</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorPrimary">@color/primary</item>
@@ -31,11 +16,57 @@
         <item name="colorControlNormal">@color/accent</item>
         <item name="colorControlActivated">@color/accent_dark</item>
         <item name="colorControlHighlight">@color/accent_dark</item>
+
         <item name="gitskarios_divider">@color/divider</item>
         <item name="gitskarios_primary_text">@color/primary_text</item>
         <item name="gitskarios_secondary_text">@color/secondary_text</item>
         <item name="gitskarios_primary_light">@color/primary_light</item>
         <item name="gitskarios_icons">@color/icons</item>
+        <item name="gitskarios_title">@color/primary_dark</item>
+        <item name="gitskarios_webview">@android:color/transparent</item>
+        <item name="gitskarios_card_background">@color/white</item>
+
+        <item name="material_drawer_background">@color/material_drawer_background</item>
+        <item name="material_drawer_primary_text">@color/material_drawer_primary_text</item>
+        <item name="material_drawer_primary_icon">@color/material_drawer_primary_icon</item>
+        <item name="material_drawer_secondary_text">@color/material_drawer_secondary_text</item>
+        <item name="material_drawer_hint_text">@color/material_drawer_hint_text</item>
+        <item name="material_drawer_divider">@color/material_drawer_divider</item>
+        <item name="material_drawer_selected">@color/material_drawer_selected</item>
+        <item name="material_drawer_selected_text">@color/primary</item>
+        <item name="material_drawer_header_selection_text">@color/material_drawer_header_selection_text</item>
+
+    </style>
+
+    <style name="Base.AppTheme.Dark" parent="AppTheme.AppCompat.Dark.Default">
+        <item name="windowActionModeOverlay">true</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/primary</item>
+        <item name="colorControlNormal">@color/gray_github_medium</item>
+        <item name="colorControlActivated">@color/accent_dark</item>
+        <item name="colorControlHighlight">@color/accent_dark</item>
+
+        <item name="gitskarios_divider">@color/divider</item>
+        <item name="gitskarios_primary_text">@color/primary_text</item>
+        <item name="gitskarios_secondary_text">@color/secondary_text</item>
+        <item name="gitskarios_primary_light">@color/primary_light</item>
+        <item name="gitskarios_icons">@color/gray_github_light</item>
+        <item name="gitskarios_title">@color/accent</item>
+        <item name="gitskarios_webview">@color/gray_github_dark</item>
+        <item name="gitskarios_card_background">@color/material_drawer_dark_divider</item>
+
+        <item name="material_drawer_background">@color/material_drawer_dark_background</item>
+        <item name="material_drawer_primary_text">@color/material_drawer_dark_primary_text</item>
+        <item name="material_drawer_primary_icon">@color/material_drawer_dark_primary_icon</item>
+        <item name="material_drawer_secondary_text">@color/material_drawer_dark_secondary_text</item>
+        <item name="material_drawer_hint_text">@color/material_drawer_dark_hint_text</item>
+        <item name="material_drawer_divider">@color/material_drawer_dark_divider</item>
+        <item name="material_drawer_selected">@color/material_drawer_dark_selected</item>
+        <item name="material_drawer_selected_text">@color/accent</item>
+        <item name="material_drawer_header_selection_text">@color/material_drawer_dark_header_selection_text</item>
+
     </style>
 
 
@@ -48,6 +79,25 @@
         <item name="colorControlNormal">@color/gray_github_medium</item>
         <item name="colorControlActivated">@color/gray_github_dark</item>
         <item name="colorControlHighlight">@color/gray_github_dark</item>
+
+        <item name="gitskarios_divider">@color/divider</item>
+        <item name="gitskarios_primary_text">@color/primary_text</item>
+        <item name="gitskarios_secondary_text">@color/secondary_text</item>
+        <item name="gitskarios_primary_light">@color/gray_github_light</item>
+        <item name="gitskarios_icons">@color/icons</item>
+    </style>
+
+
+    <style name="Base.AppTheme.Dark.Search" parent="AppTheme.AppCompat.Dark.Default">
+        <item name="windowActionModeOverlay">false</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyleGray</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/gray_github_dark</item>
+        <item name="colorAccent">@color/gray_github_dark</item>
+        <item name="colorControlNormal">@color/gray_github_medium</item>
+        <item name="colorControlActivated">@color/gray_github_dark</item>
+        <item name="colorControlHighlight">@color/gray_github_dark</item>
+
         <item name="gitskarios_divider">@color/divider</item>
         <item name="gitskarios_primary_text">@color/primary_text</item>
         <item name="gitskarios_secondary_text">@color/secondary_text</item>
@@ -57,6 +107,13 @@
 
     <!-- Default application theme. -->
     <style name="AppTheme.AppCompat.Default" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="windowActionModeOverlay">true</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+
+    </style>
+    <style name="AppTheme.AppCompat.Dark.Default" parent="Theme.AppCompat.NoActionBar">
 
         <item name="windowActionModeOverlay">true</item>
         <item name="colorPrimary">@color/primary</item>
