--- a/app/src/main/res/layout/row_gist_detail_binari.xml
+++ b/app/src/main/res/layout/row_gist_detail_binari.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,7 +15,8 @@
         android:minHeight="120dp"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="4dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardUseCompatPadding="true"
+        app:cardBackgroundColor="?attr/gitskarios_card_background">
 
         <LinearLayout
             android:layout_width="match_parent"
