--- a/app/src/main/res/layout/row_header_commit.xml
+++ b/app/src/main/res/layout/row_header_commit.xml
@@ -4,9 +4,8 @@
     style="@style/TextAppearance.AppCompat.Subhead"
     android:layout_width="match_parent"
     android:layout_height="56dp"
-    android:background="@color/gray_github_light_selected"
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:paddingLeft="24dp"
-    android:textColor="?attr/gitskarios_secondary_text"
+    android:textColor="?attr/colorAccent"
     android:textSize="@dimen/textSizeMedium" />
