dark dark everywhere

--- a/app/src/main/res/layout/files_fragment.xml
+++ b/app/src/main/res/layout/files_fragment.xml
@@ -7,6 +7,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/gray_github_light" />
+        android:layout_height="match_parent" />
 </LinearLayout>
