--- a/app/src/main/res/layout/row_commit_file.xml
+++ b/app/src/main/res/layout/row_commit_file.xml
@@ -16,7 +16,8 @@
         android:minHeight="120dp"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="4dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardUseCompatPadding="true"
+        card_view:cardBackgroundColor="?attr/gitskarios_card_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +35,7 @@
                     style="@style/TextAppearance.AppCompat.Headline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?colorPrimary"
+                    android:textColor="?attr/colorAccent"
                     tools:text="MyFile.java" />
 
                 <com.alorma.diff.lib.DiffTextView
@@ -43,19 +44,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/gapMedium"
-                    android:textColor="@color/secondary_text"
                     android:textSize="@dimen/textSizeSmall" />
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/gray_github_light_selected"
-                android:minHeight="?actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/FileRowToolbar" />
+                android:minHeight="?actionBarSize" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
