--- a/app/src/main/res/layout/user_resume_fragment.xml
+++ b/app/src/main/res/layout/user_resume_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_grey_200"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,7 +17,8 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/gapMedium"
             card_view:cardElevation="4dp"
-            tools:layout_height="120dp">
+            tools:layout_height="120dp"
+            app:cardBackgroundColor="?attr/gitskarios_card_background">
 
             <LinearLayout
                 android:id="@+id/cardAbout"
@@ -31,6 +32,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:fontFamily="sans-serif-light"
+                    android:textColor="?attr/colorAccent"
                     android:padding="@dimen/gapMedium"
                     android:text="@string/user_resume_about"
                     android:textSize="24sp" />
@@ -38,7 +40,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/md_grey_300" />
+                    android:background="?attr/colorAccent" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
@@ -49,7 +51,8 @@
             android:layout_marginBottom="@dimen/gapXLarge"
             android:layout_marginTop="@dimen/gapMedium"
             card_view:cardElevation="4dp"
-            tools:layout_height="120dp">
+            tools:layout_height="120dp"
+            app:cardBackgroundColor="?attr/gitskarios_card_background">
 
             <LinearLayout
                 android:id="@+id/cardGithub"
@@ -65,12 +68,13 @@
                     android:fontFamily="sans-serif-light"
                     android:padding="@dimen/gapMedium"
                     android:text="@string/user_resume_github"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textColor="?attr/colorAccent" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/md_grey_300" />
+                    android:background="?attr/colorAccent" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
