--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,6 +105,12 @@
         <item name="android:windowTitleStyle">@style/TitleDialogTextStyle</item>
     </style>
 
+    <style name="AppCompatAlertDialogStyle.Dark" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:windowTitleStyle">@style/TitleDialogTextStyle</item>
+    </style>
+
     <style name="TitleDialogTextStyle" parent="Base.DialogWindowTitle.AppCompat">
         <item name="android:textColor">@color/primary_dark</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
