--- a/app/src/main/res/layout/create_repository_activity.xml
+++ b/app/src/main/res/layout/create_repository_activity.xml
@@ -6,7 +6,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -14,7 +14,9 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/create"/>
 
         <Button
             android:id="@+id/create"
@@ -24,6 +26,7 @@
             android:background="@drawable/create_repos_background"
             android:enabled="false"
             android:text="@string/create_repository"
-            android:textColor="@color/white" />
-    </FrameLayout>
+            android:textColor="@color/white"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </LinearLayout>
