--- a/app/src/github/res/layout/activity_welcome.xml
+++ b/app/src/github/res/layout/activity_welcome.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".ui.activity.GithubLoginActivity"
+             tools:context=".ui.activity.WelcomeActivity"
     >
 
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
@@ -26,122 +26,53 @@
       android:paddingBottom="0dp"
       >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/second_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        />
-
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/enterLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:visibility="gone"
+        android:padding="@dimen/gapXLarge"
+        android:orientation="vertical"
         >
 
-      <LinearLayout
-          android:id="@+id/loginStart"
+      <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginBottom="?actionBarSize"
+          android:layout_height="wrap_content"
           android:layout_marginTop="?actionBarSize"
-          android:orientation="vertical"
-          android:padding="@dimen/gapXLarge"
+          android:id="@+id/login_username"
           >
-
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_launcher_web"
-            />
-
-        <Button
-            android:id="@+id/openLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapXXLarge"
-            android:text="@string/login_button"
-            />
-
-        <Button
-            android:id="@+id/openLoginAdvanced"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_button_advanced"
-            android:textSize="10sp"
-            />
-      </LinearLayout>
-
-      <!--
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_gravity="bottom"
-        android:clickable="false"
-        android:gravity="center"
-        android:textColor="@color/md_grey_500"
-        android:id="@+id/textAboutGitskarios"
-        android:text="about gitskarios"/>
-        -->
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/loginLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="visible"
-        >
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginBottom="?actionBarSize"
-          android:layout_marginTop="80dp"
-          android:gravity="center"
-          android:orientation="vertical"
-          android:padding="@dimen/gapXLarge"
-          >
-
-        <include layout="@layout/content_advanced_login"/>
 
         <EditText
-            android:id="@+id/accessToken"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapLarge"
-            android:hint="@string/login_personal_token"
+            android:hint="@string/login_username"
+            >
+          <requestFocus/>
+        </EditText>
+
+      </android.support.design.widget.TextInputLayout>
+
+      <android.support.design.widget.TextInputLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/login_password"
+          >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="@string/login_password"
             />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            />
-      </LinearLayout>
+      </android.support.design.widget.TextInputLayout>
 
       <Button
-          android:id="@+id/loginGithub"
-          style="@style/Widget.AppCompat.Button.Borderless"
-          android:layout_width="wrap_content"
-          android:layout_height="?actionBarSize"
-          android:layout_gravity="bottom|right"
+          android:id="@+id/openLogin"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
           android:text="@string/login_button"
           />
-
-      <Button
-          android:id="@+id/generateToken"
-          style="@style/Widget.AppCompat.Button.Borderless"
-          android:layout_width="wrap_content"
-          android:layout_height="?actionBarSize"
-          android:layout_gravity="bottom|left"
-          android:text="@string/generateToken"
-          />
-    </FrameLayout>
+    </LinearLayout>
   </android.support.v7.widget.CardView>
 
 </FrameLayout>
