move gists to drawer and no new activity

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -132,5 +132,8 @@
   </item>
   <item name="nav_drawer_invite"
         type="id"/>
+  <item name="nav_drawer_gists_starred"
+        type="id">nav_drawer_gists_starred
+  </item>
 
 </resources>
