--- a/app/src/github/res/layout/activity_welcome.xml
+++ b/app/src/github/res/layout/activity_welcome.xml
@@ -72,6 +72,15 @@
           android:layout_height="wrap_content"
           android:text="@string/login_button"
           />
+      <ProgressBar
+          android:layout_marginTop="24dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/progressBar"
+          android:layout_gravity="center_horizontal"
+          android:indeterminate="true"
+          android:visibility="invisible"
+          />
     </LinearLayout>
   </android.support.v7.widget.CardView>
 
