--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
   <dimen name="navigation_drawer_width">240dp</dimen>
   <dimen name="avatar_size">114dp</dimen>
   <dimen name="avatar_size_list">48dp</dimen>
+  <dimen name="avatar_size_event_list">40dp</dimen>
   <dimen name="shape_size">56dp</dimen>
   <dimen name="shape_half">23dp</dimen>
   <dimen name="user_avatar">16dp</dimen>
