--- a/app/src/githubDebug/res/values/colors.xml
+++ b/app/src/githubDebug/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="primary">@color/md_pink_700</color>
-  <color name="primary_dark">@color/md_pink_900</color>
-  <color name="primary_alpha">@color/md_pink_700</color>
-  <color name="primary_dark_alpha">@color/md_pink_900</color>
+  <color name="primary">@color/md_grey_600</color>
+  <color name="primary_dark">@color/md_grey_700</color>
+  <color name="primary_alpha">@color/md_grey_700</color>
+  <color name="primary_dark_alpha">@color/md_grey_800</color>
 
-  <color name="primary_light">@color/md_pink_400</color>
-  <color name="accent">@color/md_amber_400</color>
-  <color name="accent_welcome">@color/md_pink_100</color>
-  <color name="accent_dark">@color/md_amber_600</color>
+  <color name="primary_light">@color/md_grey_400</color>
+  <color name="accent">@color/md_blue_grey_600</color>
+  <color name="accent_welcome">@color/md_blue_grey_500</color>
+  <color name="accent_dark">@color/md_grey_500</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#727272</color>
   <color name="icons">#B6B6B6</color>
