--- a/app/src/main/res/layout/row_commit_file.xml
+++ b/app/src/main/res/layout/row_commit_file.xml
@@ -3,7 +3,7 @@
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="@dimen/gapMedium"
               android:paddingTop="0dp"
@@ -16,7 +16,7 @@
       android:foreground="?android:selectableItemBackground"
       android:minHeight="120dp"
       card_view:cardCornerRadius="3dp"
-      card_view:cardElevation="4dp"
+      card_view:cardElevation="2dp"
       card_view:cardUseCompatPadding="true"
       card_view:cardBackgroundColor="?attr/gitskarios_card_background"
       >
