--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
@@ -27,11 +28,14 @@
 
       <com.alorma.github.ui.view.UserAvatarView
           android:id="@+id/authorAvatar"
-          android:layout_width="@dimen/avatar_size_list"
-          android:layout_height="@dimen/avatar_size_list"
+          android:layout_width="@dimen/avatar_size_event_list"
+          android:layout_height="@dimen/avatar_size_event_list"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
-          android:padding="@dimen/gapMedium"
+          app:timeline_lineColor="@color/md_blue_grey_500"
+          app:timeline_lineWidth="@dimen/materialize_baseline_grid_small"
+          tools:src="@color/md_blue_grey_500"
+          app:timeline_internalPadding="0dp"
           />
 
       <TextView
@@ -40,8 +44,8 @@
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
-          android:layout_marginLeft="@dimen/gapMedium"
-          android:layout_marginStart="@dimen/gapMedium"
+          android:layout_marginLeft="@dimen/materialize_baseline_grid_x2"
+          android:layout_marginStart="@dimen/materialize_baseline_grid_x2"
           android:layout_toEndOf="@id/authorAvatar"
           android:layout_toRightOf="@id/authorAvatar"
           style="@style/Event.Title"
