--- a/app/src/main/res/layout/row_gist_detail_text.xml
+++ b/app/src/main/res/layout/row_gist_detail_text.xml
@@ -4,7 +4,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="@dimen/gapMedium"
               android:paddingTop="0dp"
