Added menú option to open repo in browser

--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -25,4 +25,10 @@
       app:showAsAction="never"
       />
 
+  <item
+      android:id="@+id/action_open_in_browser"
+      android:orderInCategory="4"
+      android:title="@string/action_open_in_browser"
+      app:showAsAction="never"
+    />
 </menu>
